--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Template Plugin",
-    "description": "A plugin for use as a template.",
+    "name": "AnimatedStatus",
+    "description": "A plugin that makes your status auto change.",
     "authors": [
         {
-            "name": "You!",
-            "id": "YOUR_ID_HERE"
+            "name": "AugustusXVIII",
+            "id": "318528448320634881"
         }
     ],
     "main": "src/index.ts",
